- Adicionado tabbar com mapa, filtro e créditos - Adicionado TableViewController - Adicionado distancia entre o usuario e o hospital - Adicionado Intro com Threads - Merge das telas da Thais

--- a/SOSHospital/SOSHospital/Info.plist
+++ b/SOSHospital/SOSHospital/Info.plist
@@ -34,5 +34,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>O App precisa de sua localização, deseja habilitar?</string>
 </dict>
 </plist>
