- Adicionado filtro por nome - Adicionado ordenação por distancia e nome - Adicionado busca por km - Adicionado navegationController - Adicionado DetailController - Adicionado Rotas (Ricardo)

--- a/SOSHospital/SOSHospital/Info.plist
+++ b/SOSHospital/SOSHospital/Info.plist
@@ -36,5 +36,10 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>O App precisa de sua localização, deseja habilitar?</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>waze</string>
+		<string>comgooglemaps</string>
+	</array>
 </dict>
 </plist>
